org.eclipse.jdt.compiler.apt.tests/processors/org/eclipse/jdt/compiler/apt/tests/processors/negative/NegativeModelProc#checkNegative7().mjava
	/**
	 * Check the model of resources/targets.negative.pa.Negative7
	 * @return true if all tests passed
	 */
	public boolean checkNegative7() throws Exception {

		// Get the roots of the Negative7 model
		List<TypeElement> rootElements = new ArrayList<TypeElement>();
		TypeElement element = _elementUtils.getTypeElement("targets.negative.pa.Negative7");
		if (null == element) {
			reportError("Element Negative7 was not found");
			return false;
		}
		rootElements.add(element);
		element = _elementUtils.getTypeElement("targets.negative.pa.Negative7A");
		if (null == element) {
			reportError("Element Negative7A was not found");
			return false;
		}
		rootElements.add(element);

		return checkModel(rootElements, NEGATIVE_7_MODEL, "Negative7");
	}

